--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,7 @@
 {
   "name": "dependencias-frontend",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "dependencies": {
-    "jquery": "~3.0.0",
-    "angular": "latest",
-    "semantic-ui": "~2.2.2",
-    "sortablejs": "latest"
+    "semantic-ui": "~2.2.2"
   }
 }
