--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GUIONMAKER",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -11,14 +11,14 @@
     "e2e": "protractor"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "latest",
+    "@angular/compiler": "latest",
+    "@angular/core": "latest",
+    "@angular/forms": "latest",
+    "@angular/http": "latest",
+    "@angular/platform-browser": "latest",
+    "@angular/platform-browser-dynamic": "latest",
+    "@angular/router": "latest",
     "angular-sortablejs": "latest",
     "body-parser": "~1.15.1",
     "bower": "^1.7.9",
@@ -26,8 +26,8 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.1",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "express-serve-static-core": "^0.1.1",
+    "express": "~4.14.0",
+    "express-serve-static-core": "~0.1.1",
     "grunt": "^1.0.1",
     "grunt-bower-task": "^0.4.0",
     "grunt-cli": "^1.2.0",
@@ -40,30 +40,32 @@
     "mongoose": "^4.6.2",
     "morgan": "~1.7.0",
     "ng2-summernote": "^1.11.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.3",
     "serve-favicon": "~2.3.0",
     "ts-helpers": "^1.1.1",
     "tslint": "^4.0.1",
-    "typescript": "^2.0.10",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.21",
-    "codelyzer": "~1.0.0-beta.3",
-    "jasmine-core": "2.5.2",
+    "@angular/compiler-cli": "latest",
+    "@types/jasmine": "latest",
+    "@types/node": "latest",
+    "angular-cli": "^1.0.0-beta.25.5",
+    "codelyzer": "^2.0.0-beta.4",
+    "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
+    "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.5",
+    "typings": "^2.1.0",
+    "webdriver-manager": "10.2.5",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
