--- a/public/src/assets/apiconfig.json
+++ b/public/src/assets/apiconfig.json
@@ -1,6 +1,7 @@
 ﻿{
   "apiURL": "localhost",
-  "apiPort": "1337",
+  "publicApiPort": "80",
+  "privateApiPort": "1337",
   "dbURL": "192.168.1.135",
   "dbCollectionName": "guionMaker",
   "maxFileSizeBytes": 2202009.6,
