--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
-    "summernote": "^0.8.2"
+    "summernote": "^0.8.2",
+    "bootstrap-toggle": "^2.2.2"
   }
 }
