--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-jwt": "^5.1.0",
     "express-serve-static-core": "~0.1.1",
     "grunt": "^1.0.1",
     "grunt-bower-task": "^0.4.0",
@@ -36,6 +37,8 @@
     "grunt-ts": "^6.0.0-beta.3",
     "grunt-tslint": "^3.3.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.3.0",
+    "jssha": "^2.2.0",
     "mime": "^1.3.4",
     "mongoose": "^4.6.2",
     "morgan": "~1.7.0",
