--- a/public/src/assets/apiconfig.json
+++ b/public/src/assets/apiconfig.json
@@ -2,7 +2,7 @@
   "apiURL": "localhost",
   "publicApiPort": "1337",
   "privateApiPort": "1337",
-  "dbURL": "192.168.1.135",
+  "dbURL": "localhost",
   "dbCollectionName": "guionMaker",
   "maxFileSizeBytes": 2202009.6,
   "mimeTypesPermitidos": [ "image/jpeg", "image/jpg", "image/png" ]
