Ajusta el listado de escenarios y personajes para seleccionarlos por columnas + cambios en la configuración para incluir protocolo en el apiconfig

--- a/public/src/assets/apiconfig.json
+++ b/public/src/assets/apiconfig.json
@@ -1,5 +1,5 @@
 ﻿{
-  "apiURL": "localhost",
+  "apiURL": "http://localhost",
   "publicApiPort": "1337",
   "privateApiPort": "1337",
   "dbURL": "localhost",
