--- a/public/src/assets/apiconfig.json
+++ b/public/src/assets/apiconfig.json
@@ -5,5 +5,7 @@
   "dbURL": "localhost",
   "dbCollectionName": "guionMaker",
   "maxFileSizeBytes": 2202009.6,
-  "mimeTypesPermitidos": [ "image/jpeg", "image/jpg", "image/png" ]
+  "mimeTypesPermitidos": [ "image/jpeg", "image/jpg", "image/png" ],
+  "plantillaPortada": "<style type=\"text/css\">body {font-family: 'Courier New', 'sans-serif';}.txtTituloPersonaje {margin-left: 42.86%;text-transform: uppercase;}.txtAcotacion {margin-left: 35.71%;}.txtDialogo {margin-left: 28.57%;max-width: 40%;word-wrap: break-word;}.txtNormal {margin-left: 16.7%;}</style><div class=\"portada\"><div class=\"tituloProyecto\"><h1>{{tituloProyecto}}</h1></div><div class=\"tipoGuion\"><h2>{{tipoGuion}}</h2></div></div>",
+  "plantillaEscena": "<div class=\"escena\"><div class=\"tituloEscena\"><h1>{{tituloEscena}}</h1></div><div class=\"contenidoEscena\">{{contenidoEscena}}</div></div>"
 }
