--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mime": "^1.3.4",
     "mongoose": "^4.6.2",
     "morgan": "~1.7.0",
+    "ng2-breadcrumb": "^0.5.14",
     "ng2-summernote": "^1.11.0",
     "rxjs": "^5.0.3",
     "serve-favicon": "~2.3.0",
