--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/core-js": "^0.9.41",
     "@types/jasmine": "latest",
     "@types/node": "latest",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "codelyzer": "^2.0.0-beta.4",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -53,6 +55,8 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "mocha": "^3.3.0",
+    "mockgoose": "^7.3.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.1",
@@ -62,16 +66,16 @@
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   },
-  "name": "GUIONMAKER",
+  "name": "guionmaker",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "tsc && set NODE_ENV=prod && node ./bin/www",
     "grunt": "grunt",
     "ng": "ng",
     "build": "ng build",
-    "test": "ng test",
+    "test": "tsc && set NODE_ENV=test && mocha --timeout 10000",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "version": "0.8.0"
+  "version": "1.0.0"
 }
