--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "latest",
     "@types/core-js": "^0.9.41",
-    "@types/jasmine": "latest",
+    "@types/mocha": "^2.2.41",
     "@types/node": "latest",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
@@ -56,7 +56,6 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "mocha": "^3.3.0",
-    "mockgoose": "^7.3.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.1",
