--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "mocha": "^3.3.0",
-    "protractor": "~4.0.13",
+    "protractor": "latest",
     "ts-node": "1.2.1",
     "tslint": "^4.3.1",
     "typescript": "^2.3.2",
