A falta de enviar mail, incluye el componente de Angular para la recuperación de contraseñas.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ lib
 bin
 obj
 .vs
+.vscode
 .tscache
 
 # Optional npm cache directory
@@ -53,3 +54,6 @@ obj
 # Source maps
 *.js.map
 .idea
+
+# Manual http tests
+*.request
