--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
+    "@angular/cli": "latest",
     "@angular/compiler-cli": "latest",
     "@types/core-js": "^0.9.41",
     "@types/mocha": "^2.2.41",
